etiquetas adds puestas

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4433584825298873"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-4433584825298873">
 
   </head>
   <body>
