SEO basico añadido

--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./fire.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<html lang="es">
 
-    <title>Yo Nunca</title>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/fire.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Yo Nunca: Juego divertido para amigos. Escoge un modo y disfruta de frases atrevidas y personalizadas. Ideal para fiestas y reuniones." />
+  <meta name="keywords" content="yo nunca, juego para amigos, frases atrevidas, party game, modo personalizado" />
+  <meta name="author" content="Guille" />
+  <meta name="robots" content="index, follow" />
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4433584825298873"
-     crossorigin="anonymous"></script>
-     <meta name="google-adsense-account" content="ca-pub-4433584825298873">
+  <meta property="og:title" content="Yo Nunca - Juego divertido de frases atrevidas para amigos" />
+  <meta property="og:description"
+    content="Disfruta de frases atrevidas y personalizadas con tus amigos. Ideal para fiestas y reuniones." />
+  <meta property="og:image" content="%PUBLIC_URL%/fire.jpg" />
+  <meta property="og:url" content="https://yonunca.vercel.app" />
+  <meta property="og:type" content="website" />
 
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Yo Nunca - Juego divertido para amigos" />
+  <meta name="twitter:description"
+    content="Disfruta de frases atrevidas y personalizadas con tus amigos. Ideal para fiestas y reuniones." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/fire.jpg" />
 
-  </body>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Yo Nunca - Juego divertido de frases atrevidas para amigos</title>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4433584825298873"
+    crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-4433584825298873">
+
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+</body>
+
 </html>
